# face_sampler

./: .gitignore  face_sampler.py  pyproject.toml  setup.py
src/face_sampler/: __main__.py  face_detector.py
