[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "face_sampler"
version = "0.1"
dependencies = [
  "opencv-python==4.11.0.86",
  "dlib==19.24.6",
  "pillow==11.1.0",
  "pyesrgan @ git+https://github.com/saltchicken/pyesrgan@f17849d5c1c40d0719d370f15c4db3490abd65c2"
]

[project.scripts]
face_sampler = "face_sampler.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

